client/src/index.css
@import url('https://rsms.me/inter/inter.css');
:root {
  --nav-height: 75px;
}

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

html,
body,
#root {
  height: 100%;
  min-height: 100%;
}

body {
  padding: 0;
  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  background-color: #131313;
  line-height: 1.5;
}

@supports (font-variation-settings: normal) {
  body {
    font-family: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI',
      'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
      'Helvetica Neue', sans-serif;
  }
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.youtube-player {
  display: block;
  width: 100%;
  height: 169px;
}
.youtube-player_full {
  height: calc(100vh - var(--nav-height));
}

/* Algolia React InstantSearch styles */

.ais-Highlight-highlighted {
  font-style: normal;
  background-color: #56a4ff;
  color: #00031a;
}

.ais-SearchBox {
  width: 100%;
}

.ais-SearchBox-form {
  display: block;
  position: relative;
}

.ais-SearchBox-input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 8px 32px;
  width: 100%;
  position: relative;
  background: none;
  border: none;
  border-bottom: 2px solid #56a4ff;
  color: white;
  font-size: 16px;
  font-weight: 600;
  border-radius: 0;
}
.ais-SearchBox-input::-webkit-input-placeholder {
  color: #646570;
}
.ais-SearchBox-input::-moz-placeholder {
  color: #646570;
}
.ais-SearchBox-input:-ms-input-placeholder {
  color: #646570;
}
.ais-SearchBox-input:-moz-placeholder {
  color: #646570;
}

.ais-SearchBox-submit,
.ais-SearchBox-reset,
.ais-SearchBox-loadingIndicator {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position: absolute;
  z-index: 1;
  width: 24px;
  height: 24px;
  top: 50%;
  right: 8px;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: #646570;
}

.ais-SearchBox-submit {
  left: 4px;
}

.ais-SearchBox-reset {
  right: 4px;
}

.ais-SearchBox-submitIcon,
.ais-SearchBox-resetIcon,
.ais-SearchBox-loadingIcon {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}
.ais-RefinementList {
  width: 100%;
  border: 2px solid #56a4ff;
  border-radius: 4px;
  padding: 8px;
}

.ais-RefinementList .ais-RefinementList-searchBox {
  width: 100%;
  margin-bottom: 8px;
}

.ais-RefinementList .ais-RefinementList-searchBox .ais-SearchBox-input {
  font-weight: normal;
  border-bottom: none;
}

.ais-RefinementList-list {
  max-height: 25vh;
  overflow: scroll;
  font-weight: 500;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(296px, 1fr));
}

.ais-RefinementList-item {
  font-size: 14px;
  padding: 4px;
}

.ais-RefinementList-label,
.ais-RefinementList-checkbox {
  cursor: pointer;
}

.ais-RefinementList-labelText {
  padding-left: 4px;
}

.ais-RefinementList-count {
  background-color: #646570;
  border-radius: 4px;
  padding: 2px;
  margin-left: 4px;
  font-weight: 500;
}
.ais-CurrentRefinements-category {
  font-size: 12px;
  display: inline-block;
  background-color: #646570;
  border-radius: 4px;
  padding: 4px;
  margin-right: 8px;
}

.ais-CurrentRefinements-categoryLabel {
  display: inline-block;
  margin-right: 4px;
}

.ais-CurrentRefinements-delete {
  cursor: pointer;
}

.ais-ClearRefinements {
  margin-top: 8px;
}

.ais-ClearRefinements-button {
  color: #56a4ff;
}

.ais-ClearRefinements-button--disabled {
  display: none;
}

